feat: add base to controllers

--- a/packages/backend/diet-diary/serverless.yml
+++ b/packages/backend/diet-diary/serverless.yml
@@ -28,7 +28,7 @@ provider:
 
 functions:
   hello:
-    handler: src/main/functions/helloHandler.hello
+    handler: src/main/functions/helloHandler.handler
     events:
       - httpApi:
           path: /
