--- a/packages/backend/diet-diary/package.json
+++ b/packages/backend/diet-diary/package.json
@@ -8,6 +8,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "esbuild-plugin-tsc": "^0.5.0",
     "reflect-metadata": "^0.2.2",
     "zod": "^4.3.6"
   }
