--- a/packages/backend/diet-diary/package.json
+++ b/packages/backend/diet-diary/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.996.0",
     "@types/aws-lambda": "^8.10.160",
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.3",
@@ -8,6 +9,11 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.996.0",
+    "@aws-sdk/client-s3": "^3.996.0",
+    "@aws-sdk/client-sqs": "^3.996.0",
+    "@aws-sdk/lib-dynamodb": "^3.996.0",
+    "@aws-sdk/s3-presigned-post": "^3.996.0",
     "esbuild-plugin-tsc": "^0.5.0",
     "reflect-metadata": "^0.2.2",
     "zod": "^4.3.6"
