--- a/packages/backend/diet-diary/package.json
+++ b/packages/backend/diet-diary/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/lib-dynamodb": "^3.996.0",
     "@aws-sdk/s3-presigned-post": "^3.996.0",
     "esbuild-plugin-tsc": "^0.5.0",
+    "ksuid": "^3.0.0",
     "reflect-metadata": "^0.2.2",
     "zod": "^4.3.6"
   }
