--- a/packages/backend/diet-diary/package.json
+++ b/packages/backend/diet-diary/package.json
@@ -17,6 +17,7 @@
     "esbuild-plugin-tsc": "^0.5.0",
     "ksuid": "^3.0.0",
     "reflect-metadata": "^0.2.2",
+    "ulid": "^3.0.2",
     "zod": "^4.3.6"
   }
 }
